--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Web Designer</span>
               <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Zaitsev Artyom Igorevich. Bachelor. Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
               <p data-aos="fade-right" data-aos-delay="500">
-                Follow Emely &mdash;
+                Follow Artyom &mdash;
                 <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a>
                 <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a>
                 <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a>
