--- a/index-ru.html
+++ b/index-ru.html
@@ -33,10 +33,10 @@
                     <div class="col-12 col-md-10 d-none d-xl-block">
                         <nav class="site-navigation position-relative text-right" role="navigation">
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li class="active"><a href="index.html">Главная</a></li>
                                 <!--                <li><a href="about.html">About Us</a></li>-->
-                                <li><a href="contact.html">Contacts</a></li>
-                                <li class="cta"><a href="https://vk.com/id171934947">To order a site</a></li>
+                                <li><a href="contact.html">Контакты</a></li>
+                                <li class="cta"><a href="https://vk.com/id171934947">Заказать сайт</a></li>
                             </ul>
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li class="cta-but"><a href="index-ru.html">РУС</a></li>
@@ -51,8 +51,8 @@
         <div class="site-section site-hero">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-md-10"> <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Belarus</span>
-                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Web design by Artyom Zaitsev</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Dobrush, +375 (29) 234-76-23</span> <a href="https://vk.com/id171934947" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>To order a site</span></a> </div>
+                    <div class="col-md-10"> <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Беларусь</span>
+                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Веб-дизайн Артёма Зайцева</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Добруш, +375 (29) 234-76-23</span> <a href="https://vk.com/id171934947" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Заказать сайт</span></a> </div>
                 </div>
             </div>
         </div>
@@ -61,19 +61,19 @@
                 <div class="row mb-5">
                     <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="site-section-heading">
-                            <h2>Web site</h2> </div>
+                            <h2>Веб-сайт</h2> </div>
                     </div>
                     <div class="col-lg-5 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
-                        <p>We are equally sensitive to any project from a business card website to a multidisciplinary online store. Each Internet resource, in our understanding, should be sold in one way or another.</p>
+                        <p>Мы одинаково трепетно относимся к любому проекту от сайта-визитки до многопрофильного интернет-магазина. Каждый интернет-ресурс в нашем понимании должен тем или иным образом продавать и приносить доход.</p>
                     </div>
                 </div>
                 <div class="row align-items-center speaker">
                     <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100"> <img src="images/person_11.jpg" alt="Image" class="img-fluid"> </div>
                     <div class="col-lg-6 ml-auto">
-                        <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Artyom Zaitsev</h2>
-                        <div class="bio pl-lg-5"> <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Web Designer</span>
-                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Zaitsev Artyom Igorevich. Bachelor. Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
-                            <p data-aos="fade-right" data-aos-delay="500"> Follow Artyom &mdash; <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a> <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> </p>
+                        <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Артём Зайцев</h2>
+                        <div class="bio pl-lg-5"> <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">ВЕБ-ДИЗАЙНЕР</span>
+                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Зайцев Артём Игоревич. Бакалавр. Факультет автоматизированных и информационных систем. Информационные системы и технологии. НАВЫКИ: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+                            <p data-aos="fade-right" data-aos-delay="500"> Подписывайтесь на меня &mdash; <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a> <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> </p>
                         </div>
                     </div>
                 </div>
@@ -83,50 +83,51 @@
             <div class="container">
                 <div class="row mb-5">
                     <div class="site-section-heading-operating">
-                        <h2>OPERATING PROCEDURE OVER THE CREATION OF THE SITE</h2> </div>
+                        <h2>ПРОЦЕДУРА РАБОТЫ ПО СОЗДАНИЮ САЙТА</h2> </div>
                 </div>
                 <div class="row align-items-stretch program">
                     <div class="col-12 border-top border-bottom py-5" data-aos="fade" data-aos-delay="200">
                         <div class="row align-items-stretch">
-                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Formulation of the problem</span></div>
-                            <div class="col-md-9"> <span>We put your tasks and wishes in the first place and seriously approach each project, whether it be a business card site or a large trading portal.</span> </div>
+                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Постановка задачи</div>
+              <div class="col-md-9">
+                  <span>Ставим Ваши задачи и пожелания на первое место и серьезно подходим к каждому проекту, будь то сайт-визитка или крупный торговый портал.</span> </div>
                         </div>
                     </div>
                     <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="300">
                         <div class="row align-items-stretch">
-                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Marketing research</span></div>
-                            <div class="col-md-9"> <span>Before developing the project, we analyze the sites of competitors and select the most effective options for the structure and presentation of information.</span> </div>
+                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Маркетинговые исследования</div>
+              <div class="col-md-9">
+                <span>Перед разработкой проекта анализируем сайты конкурентов и выбираем наиболее эффективные варианты структуры и подачи информации.</span> </div>
                         </div>
                     </div>
                     <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="400">
                         <div class="row align-items-stretch">
-                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Concept development</span></div>
-                            <div class="col-md-9"> <span>Specialists create a layout indicating the main sections, demonstrating the layout of the site and with the justifications transfer the project for approval to the client.</span> </div>
+                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Разработка концепции</span></div>
+                            <div class="col-md-9"> <span>Специалисты создают макет с указанием основных разделов, демонстрацией схемы сайта и с обоснованиями передают проект на утверждение клиенту.</span> </div>
                         </div>
                     </div>
                     <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="500">
                         <div class="row align-items-stretch">
-                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Website creation</span></div>
-                            <div class="col-md-9"> <span>We develop a web project “from scratch”: from concept and design to programming, connecting tools and filling content.</span> </div>
+                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Создание сайта</span></div>
+                            <div class="col-md-9"> <span>Разрабатываем веб-проект «с нуля»: от концепции и дизайна до программирования, подключения инструментов и наполнения контентом.</span> </div>
                         </div>
                     </div>
                     <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="600">
                         <div class="row align-items-stretch">
-                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Testing and launch</span></div>
-                            <div class="col-md-9"> <span>Before loading the site, the hosting server checks it for the absence of bugs, cross-browser compatibility and correct display on any devices.</span> </div>
+                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Тестирование и запуск</span></div>
+                            <div class="col-md-9"> <span>Перед загрузкой сайта хостинг-сервер проверяем его на отсутствие багов, кроссбраузерность и корректность отображения на любых устройствах.</span> </div>
                         </div>
                     </div>
                     <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="700">
                         <div class="row align-items-stretch">
-                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Training</div>
-              <div class="col-md-9">
-                <span>We demonstrate to your employees all the features of the site, quickly and easily explain how to work with the admin panel and track the necessary information.</span> </div>
+                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Обучение</span></div>
+                            <div class="col-md-9"> <span>Демонстрируем Вашим сотрудникам все возможности сайта, быстро и доступно объясняем, как работать с панелью администратора и отслеживать нужную информацию.</span> </div>
                         </div>
                     </div>
                     <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="700">
                         <div class="row align-items-stretch">
-                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Support and Promotion</span></div>
-                            <div class="col-md-9"> <span>If you wish, we continue to “take care” of your site: we monitor the relevance of the content, update the software part, connect new tools and attract new users.</span> </div>
+                            <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Поддержка и продвижение</span></div>
+                            <div class="col-md-9"> <span>При желании - продолжаем «заботиться» о Вашем сайте: следим за актуальностью контента, обновляем программную часть, подключаем новые инструменты и привлекаем новых пользователей.</span> </div>
                         </div>
                     </div>
                 </div>
@@ -137,41 +138,41 @@
                 <div class="row mb-5">
                     <div class="col-lg-4">
                         <div class="site-section-heading" data-aos="fade-up">
-                            <h2>My works</h2> </div>
+                            <h2>Мои работы</h2> </div>
                     </div>
                     <div class="col-lg-6 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
-                        <p>The following is my work.
-                            <br> SITES WHICH ALREADY MAKE PROFIT.</p>
+                        <p>Ниже вы можете увидеть мои работы
+                            <br>САЙТЫ КОТОРЫЕ УЖЕ ПРИНОСЯТ ПРИБЫЛЬ.</p>
                     </div>
                 </div>
                 <div class="row mb-5">
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="200">
                         <a href="http://geroytruda.by/" class="d-block mb-4"> <img src="images/MyWork/DBF.PNG" alt="Image" class="img-fluid"> </a>
-                        <h2 class="mb-4"><a href="http://geroytruda.by/">Dobrush paper factory<br>«Hero of Labor»</a></h2>
+                        <h2 class="mb-4"><a href="http://geroytruda.by/">Добрушская бумажная фабрика<br>«Герой труда»</a></h2>
                         <div class="mb-4 post-meta d-flex align-items-center">
                             <div class="mr-2"><img src="images/person_11.jpg" alt="Image" class="img-fluid"></div>
-                            <div><span>By <a href="#">Artyom Zaitsev</a></span> &mdash; <span>Oct. 25, 2019</span></div>
+                            <div><span><a href="#">Артём Зайцев</a></span> &mdash; <span>25 Октября, 2019</span></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="300">
                         <a href="http://almmetbel.by/" class="d-block mb-4"> <img src="images/MyWork/AlmmetBel.png" alt="Image" class="img-fluid"> </a>
-                        <h2 class="mb-4"><a href="http://almmetbel.by/">LLC «AlmmetBel»<br> Sale of hardware</a></h2>
+                        <h2 class="mb-4"><a href="http://almmetbel.by/">ООО «АльметБел»<br>Продажа метизов</a></h2>
                         <div class="mb-4 post-meta d-flex align-items-center">
                             <div class="mr-2"><img src="images/person_11.jpg" alt="Image" class="img-fluid"></div>
-                            <div><span>By <a href="#">Artyom Zaitsev</a></span> &mdash; <span>Sep. 9, 2017</span></div>
+                            <div><span><a href="#">Зайцев Артём</a></span> &mdash; <span>9 Сентября, 2017</span></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="400">
                         <a href="#" class="d-block mb-4"> <img src="images/MyWork/WebDevelop.PNG" alt="Image" class="img-fluid"> </a>
-                        <h2 class="mb-4"><a href="#">Novice web developer landing page</a></h2>
+                        <h2 class="mb-4"><a href="#">Целевая страница начинающего веб-разработчика</a></h2>
                         <div class="mb-4 post-meta d-flex align-items-center">
                             <div class="mr-2"><img src="images/person_11.jpg" alt="Image" class="img-fluid"></div>
-                            <div><span>By <a href="#">Artyom Zaitsev</a></span> &mdash; <span>Nov. 13, 2017</span></div>
+                            <div><span><a href="#">Зайцев Артём</a></span> &mdash; <span>13 Ноября, 2017</span></div>
                         </div>
                     </div>
                 </div>
                 <div class="row" data-aos="fade-up" data-aos-delay="500">
-                    <div class="col-12 text-center"> <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>More of my work</span></a> </div>
+                    <div class="col-12 text-center"> <a href="#" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Больше работ</span></a> </div>
                 </div>
             </div>
         </div>
@@ -179,18 +180,18 @@
             <div class="container">
                 <div class="row mb-5">
                     <div class="col-md-4">
-                        <h2 class="footer-heading text-uppercase mb-4">Do you need a website?</h2>
-                        <p>TELL US ABOUT THE TASKS OF YOUR FUTURE SITE AND WE WILL MAKE THE MOST FAVORABLE OFFER!</p>
+                        <h2 class="footer-heading text-uppercase mb-4">Вам нужен сайт?</h2>
+                        <p>СКАЖИТЕ НАМ О ЗАДАЧАХ ВАШЕГО БУДУЩЕГО САЙТА, И МЫ СДЕЛАЕМ САМОЕ ВЫГОДНОЕ ПРЕДЛОЖЕНИЕ!</p>
                     </div>
                     <div class="col-md-3 ml-auto">
-                        <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
+                        <h2 class="footer-heading text-uppercase mb-4">БЫСТРЫЕ ССЫЛКИ</h2>
                         <ul class="list-unstyled">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="index.html">Главная</a></li>
+                            <li><a href="contact.html">Контакты</a></li>
                         </ul>
                     </div>
                     <div class="col-md-4">
-                        <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
+                        <h2 class="footer-heading text-uppercase mb-4">СВЯЗАТЬСЯ С НАМИ</h2>
                         <p> <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2 pl-0"><span class="icon-facebook"></span></a> <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> </p>
                     </div>
                 </div>
@@ -201,7 +202,7 @@
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> All rights reserved | This template is made with by <a href="https://vk.com/id171934947" target="_blank">Artyom Zaitsev</a>
+                                </script> Все права защищены | Этот шаблон сделан <a href="https://vk.com/id171934947" target="_blank">Артёмом Зайцевым</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
