--- a/contact.html
+++ b/contact.html
@@ -40,14 +40,14 @@
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="contact.html">Contacts</a></li>
-                <li class="cta"><a href="https://vk.com/id171934947">To Order a site</a></li>
+                <li><a href="index.html">Главная</a></li>
+                <li class="active"><a href="contact.html">Контакты</a></li>
+                <li class="cta"><a href="https://vk.com/id171934947">Заказать сайт</a></li>
               </ul>
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li class="cta-but"><a href="index-ru.html">РУС</a></li>
-                <li class="cta-but"><a href="index.html">ENG</a></li>
-              </ul>
+                                <li class="active cta-but"><a href="index-ru.html">РУС</a></li>
+                                <li class="cta-but"><a href="index.html">ENG</a></li>
+                            </ul>
             </nav>
           </div>
           <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a></div>
@@ -59,8 +59,8 @@
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-10">
-            <span class="d-block mb-3 caption" data-aos="fade-up">Get In Touch</span>
-            <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">Contact Us</h1>
+            <span class="d-block mb-3 caption" data-aos="fade-up">Связаться</span>
+            <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="100">Свяжитесь с нами</h1>
           </div>
         </div>
       </div>
@@ -75,11 +75,11 @@
 
               <div class="row form-group">
                 <div class="col-md-6 mb-3 mb-md-0">
-                  <label class="" for="fname">First Name</label>
+                  <label class="" for="fname">Имя</label>
                   <input type="text" name="fname" class="form-control" required>>
                 </div>
                 <div class="col-md-6">
-                  <label class="" for="lname">Last Name</label>
+                  <label class="" for="lname">Фамилия</label>
                   <input type="text" name="lname" class="form-control" required>>
                 </div>
               </div>
@@ -87,7 +87,7 @@
               <div class="row form-group">
 
                 <div class="col-md-12">
-                  <label class="" for="email">Email</label>
+                  <label class="" for="email">Электронный адрес</label>
                   <input type="text" name="email" class="form-control" required>>
                 </div>
               </div>
@@ -95,14 +95,14 @@
               <div class="row form-group">
 
                 <div class="col-md-12">
-                  <label class="" for="subject">Subject</label>
+                  <label class="" for="subject">Тема</label>
                   <input type="subject" id="subject" class="form-control">
                 </div>
               </div>
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <label class="" for="message">Message</label>
+                  <label class="" for="message">Сообщение</label>
                   <textarea name="message" id="message" cols="30" rows="7" class="form-control"></textarea>
                 </div>
               </div>
@@ -118,13 +118,13 @@
           </div>
           <div class="col-md-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="p-4 mb-3">
-              <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Address</p>
-              <p class="mb-4">Belarus, Gomel region, Dobrush city, Ksmonavtov street, 103</p>
+              <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Адрес</p>
+              <p class="mb-4">Беларусь, Гомельская область, город Добруш, улица Космонавтов, дом 103</p>
 
-              <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Phone</p>
+              <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Телефон</p>
               <p class="mb-4"><a href="#">+375 (29) 2347623</a></p>
 
-              <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Email Address</p>
+              <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Email адрес</p>
               <p class="mb-0"><a href="#">ARTdesYOM@gmail.com</a></p>
 
             </div>
@@ -137,18 +137,18 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-md-4">
-            <h2 class="footer-heading text-uppercase mb-4">Do you need a website?</h2>
-            <p>TELL US ABOUT THE TASKS OF YOUR FUTURE SITE AND WE WILL MAKE THE MOST FAVORABLE OFFER!</p>
+            <h2 class="footer-heading text-uppercase mb-4">Вам нужен сайт?</h2>
+            <p>СКАЖИТЕ НАМ О ЗАДАЧАХ ВАШЕГО БУДУЩЕГО САЙТА, И МЫ СДЕЛАЕМ САМОЕ ВЫГОДНОЕ ПРЕДЛОЖЕНИЕ!</p>
           </div>
           <div class="col-md-3 ml-auto">
-            <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
+            <h2 class="footer-heading text-uppercase mb-4">БЫСТРЫЕ ССЫЛКИ</h2>
             <ul class="list-unstyled">
-                 <li><a href="index.html">Home</a></li>
-                 <li><a href="contact.html">Contact</a></li>
+              <li><a href="index.html">Главная</a></li>
+              <li><a href="contact.html">Контакты</a></li>
             </ul>
           </div>
           <div class="col-md-4">
-            <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
+            <h2 class="footer-heading text-uppercase mb-4">СВЯЗАТЬСЯ С НАМИ</h2>
             <p>
               <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2 pl-0"><span class="icon-facebook"></span></a>
               <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a>
@@ -162,7 +162,7 @@
               <div class="border-top pt-5">
               <p>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with by <a href="https://vk.com/id171934947" target="_blank" >Artyom Zaitsev</a>
+              Copyright &copy; <script>document.write(new Date().getFullYear());</script> Все права защищены | Этот шаблон сделан <a href="https://vk.com/id171934947" target="_blank" >Артёмом Зайцевым</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               </p>
             </div>
