--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                                 <li class="cta"><a href="https://vk.com/id171934947">Заказать сайт</a></li>
                             </ul>
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li class="active cta-but"><a href="index-ru.html">РУС</a></li>
-                                <li class="cta-but"><a href="index.html">ENG</a></li>
+                                <li class="active cta-but"><a href="index.html">РУС</a></li>
+                                <li class="cta-but"><a href="index-en.html">ENG</a></li>
                             </ul>
                         </nav>
                     </div>
