--- a/contact-en.html
+++ b/contact-en.html
@@ -40,8 +40,8 @@
           <div class="col-12 col-md-10 d-none d-xl-block">
             <nav class="site-navigation position-relative text-right" role="navigation">
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="contact.html">Contacts</a></li>
+                <li><a href="index-en.html">Home</a></li>
+                <li class="active"><a href="contact-en.html">Contacts</a></li>
                 <li class="cta"><a href="https://vk.com/id171934947">To Order a site</a></li>
               </ul>
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
@@ -143,8 +143,8 @@
           <div class="col-md-3 ml-auto">
             <h2 class="footer-heading text-uppercase mb-4">Quick Links</h2>
             <ul class="list-unstyled">
-                 <li><a href="index.html">Home</a></li>
-                 <li><a href="contact.html">Contact</a></li>
+                 <li><a href="index-en.html">Home</a></li>
+                 <li><a href="contact-en.html">Contact</a></li>
             </ul>
           </div>
           <div class="col-md-4">
