--- a/index-en.html
+++ b/index-en.html
@@ -33,9 +33,9 @@
                     <div class="col-12 col-md-10 d-none d-xl-block">
                         <nav class="site-navigation position-relative text-right" role="navigation">
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
-                                <li class="active"><a href="index.html">Home</a></li>
+                                <li class="active"><a href="index-en.html">Home</a></li>
                                 <!--                <li><a href="about.html">About Us</a></li>-->
-                                <li><a href="contact.html">Contacts</a></li>
+                                <li><a href="contact-en.html">Contacts</a></li>
                                 <li class="cta"><a href="https://vk.com/id171934947">To order a site</a></li>
                             </ul>
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
