--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
 
               <div class="row form-group">
                 <div class="col-md-12">
-                  <input type="submit" value="Send Message" class="btn btn-primary py-2 px-4 text-white">
+                  <input type="submit" value="Отправить сообщение" class="btn btn-primary py-2 px-4 text-white">
                 </div>
               </div>
 
