--- a/contact.html
+++ b/contact.html
@@ -70,51 +70,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6" data-aos="fade-up">
-            <form action="send.php" method="post">
-
-
-              <div class="row form-group">
-                <div class="col-md-6 mb-3 mb-md-0">
-                  <label class="" for="fname">Имя</label>
-                  <input type="text" name="fname" class="form-control" required>>
-                </div>
-                <div class="col-md-6">
-                  <label class="" for="lname">Фамилия</label>
-                  <input type="text" name="lname" class="form-control" required>>
-                </div>
-              </div>
-
-              <div class="row form-group">
-
-                <div class="col-md-12">
-                  <label class="" for="email">Электронный адрес</label>
-                  <input type="text" name="email" class="form-control" required>>
-                </div>
-              </div>
-
-              <div class="row form-group">
-
-                <div class="col-md-12">
-                  <label class="" for="subject">Тема</label>
-                  <input type="subject" id="subject" class="form-control">
-                </div>
-              </div>
-
-              <div class="row form-group">
-                <div class="col-md-12">
-                  <label class="" for="message">Сообщение</label>
-                  <textarea name="message" id="message" cols="30" rows="7" class="form-control"></textarea>
-                </div>
-              </div>
-
-              <div class="row form-group">
-                <div class="col-md-12">
-                  <input type="submit" value="Отправить сообщение" class="btn btn-primary py-2 px-4 text-white">
-                </div>
-              </div>
-
-
-            </form>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfnHDaaBePaRtvOWCyoyJkrGrF_zYsmw084q2a9UGjf546HTw/viewform?embedded=true" width="640" height="1522" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
           </div>
           <div class="col-md-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="p-4 mb-3">
