--- a/contact-en.html
+++ b/contact-en.html
@@ -42,7 +42,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index-en.html">Home</a></li>
                 <li class="active"><a href="contact-en.html">Contacts</a></li>
-                <li class="cta"><a href="https://vk.com/id171934947">To Order a site</a></li>
+                <li class="cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSejv5fiJe6DnxbpEoG5tdNLdMH7ZE81JL-lXoqgk1Ad7z1xBQ/viewform?usp=sf_link">To Order a site</a></li>
               </ul>
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li class="cta-but"><a href="contact.html">РУС</a></li>
