--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="index.html">Главная</a></li>
                 <li class="active"><a href="contact.html">Контакты</a></li>
-                <li class="cta"><a href="https://vk.com/id171934947">Заказать сайт</a></li>
+                <li class="cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfnHDaaBePaRtvOWCyoyJkrGrF_zYsmw084q2a9UGjf546HTw/viewform?usp=sf_link">Заказать сайт</a></li>
               </ul>
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li class="active cta-but"><a href="contact.html">РУС</a></li>
