--- a/index-en.html
+++ b/index-en.html
@@ -36,7 +36,7 @@
                                 <li class="active"><a href="index-en.html">Home</a></li>
                                 <!--                <li><a href="about.html">About Us</a></li>-->
                                 <li><a href="contact-en.html">Contacts</a></li>
-                                <li class="cta"><a href="https://vk.com/id171934947">To order a site</a></li>
+                                <li class="cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSejv5fiJe6DnxbpEoG5tdNLdMH7ZE81JL-lXoqgk1Ad7z1xBQ/viewform?usp=sf_link">To order a site</a></li>
                             </ul>
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li class="cta-but"><a href="index.html">РУС</a></li>
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-10"> <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Belarus</span>
-                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Web design by Artyom Zaitsev</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Dobrush, +375 (29) 234-76-23</span> <a href="https://vk.com/id171934947" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>To order a site</span></a> </div>
+                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Web design by Artyom Zaitsev</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Dobrush, +375 (29) 234-76-23</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSejv5fiJe6DnxbpEoG5tdNLdMH7ZE81JL-lXoqgk1Ad7z1xBQ/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>To order a site</span></a> </div>
                 </div>
             </div>
         </div>
