--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                 <li class="active"><a href="index.html">Главная</a></li>
                                 <!--                <li><a href="about.html">About Us</a></li>-->
                                 <li><a href="contact.html">Контакты</a></li>
-                                <li class="cta"><a href="https://vk.com/id171934947">Заказать сайт</a></li>
+                                <li class="cta"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfnHDaaBePaRtvOWCyoyJkrGrF_zYsmw084q2a9UGjf546HTw/viewform?usp=sf_link">Заказать сайт</a></li>
                             </ul>
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                                 <li class="active cta-but"><a href="index.html">РУС</a></li>
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-10"> <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Беларусь</span>
-                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Веб-дизайн Артёма Зайцева</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Добруш, +375 (29) 234-76-23</span> <a href="https://vk.com/id171934947" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Заказать сайт</span></a> </div>
+                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Веб-дизайн Артёма Зайцева</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Добруш, +375 (29) 234-76-23</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnHDaaBePaRtvOWCyoyJkrGrF_zYsmw084q2a9UGjf546HTw/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Заказать сайт</span></a> </div>
                 </div>
             </div>
         </div>
