--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="300">
                         <a href="http://almmetbel.by/" class="d-block mb-4"> <img src="images/MyWork/AlmmetBel.png" alt="Image" class="img-fluid"> </a>
-                        <h2 class="mb-4"><a href="http://almmetbel.by/">ООО «АльметБел»<br>Продажа метизов</a></h2>
+                        <h2 class="mb-4"><a href="http://almmetbel.by/">ООО «АлмметБел»<br>Продажа метизов</a></h2>
                         <div class="mb-4 post-meta d-flex align-items-center">
                             <div class="mr-2"><img src="images/person_11.jpg" alt="Image" class="img-fluid"></div>
                             <div><span><a href="#">Зайцев Артём</a></span> &mdash; <span>9 Сентября, 2017</span></div>
