--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div class="col-lg-6 ml-auto">
                         <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Артём Зайцев</h2>
                         <div class="bio pl-lg-5"> <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">ВЕБ-ДИЗАЙНЕР</span>
-                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Зайцев Артём Игоревич. Факультет автоматизированных и информационных систем. Информационные системы и технологии. НАВЫКИ: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Закончил факультет автоматизированных и информационных систем. Информационные системы и технологии. НАВЫКИ: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
                             <p data-aos="fade-right" data-aos-delay="500"> Подписывайтесь на меня &mdash; <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a> <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> </p>
                         </div>
                     </div>
