--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/style.css"> </head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
 <body>
     <div class="site-wrap">
@@ -29,7 +30,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-11 col-xl-2">
-                        <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">ART<span class="text-primary">design</span>YOM</a></h1> </div>
+                        <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">ART<span class="text-primary">design</span>YOM</a></h1>
+                    </div>
                     <div class="col-12 col-md-10 d-none d-xl-block">
                         <nav class="site-navigation position-relative text-right" role="navigation">
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
@@ -52,7 +54,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-10"> <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Беларусь</span>
-                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Веб-дизайн Артёма Зайцева</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Добруш, +375 (29) 234-76-23</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnHDaaBePaRtvOWCyoyJkrGrF_zYsmw084q2a9UGjf546HTw/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Заказать сайт</span></a> </div>
+                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Веб-дизайн Артёма Зайцева</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Добруш, +375 (29) 234-76-23</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnHDaaBePaRtvOWCyoyJkrGrF_zYsmw084q2a9UGjf546HTw/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Заказать сайт</span></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -61,7 +64,8 @@
                 <div class="row mb-5">
                     <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="site-section-heading">
-                            <h2>Веб-сайт</h2> </div>
+                            <h2>Веб-сайт</h2>
+                        </div>
                     </div>
                     <div class="col-lg-5 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
                         <p>Мы одинаково трепетно относимся к любому проекту от сайта-визитки до многопрофильного интернет-магазина. Каждый интернет-ресурс в нашем понимании должен тем или иным образом продавать и приносить доход.</p>
@@ -72,8 +76,31 @@
                     <div class="col-lg-6 ml-auto">
                         <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Артём Зайцев</h2>
                         <div class="bio pl-lg-5"> <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">ВЕБ-ДИЗАЙНЕР</span>
-                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Закончил факультет автоматизированных и информационных систем. Информационные системы и технологии. НАВЫКИ: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
-                            <p data-aos="fade-right" data-aos-delay="500"> Подписывайтесь на меня &mdash; <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a> <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> </p>
+                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Зайцев Артём Игоревич. Закончил факультет автоматизированных и информационных систем. Информационные системы и технологии. Навыки: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+                            <p data-aos="fade-right" data-aos-delay="500"> 
+                            Подписывайтесь на меня &mdash; 
+                                <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a> 
+                                <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> 
+                                <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row align-items-center speaker">
+                    <div class="col-lg-6 mb-5 mb-lg-0 order-lg-2" data-aos="fade" data-aos-delay="100">
+                        <img src="images/person_12.jpg" alt="Image" class="img-fluid">
+                    </div>
+                    <div class="col-lg-6 ml-auto order-lg-1">
+                        <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Александр Лешков</h2>
+                        <div class="bio pr-lg-5">
+                            <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300">ВЕБ-ДИЗАЙНЕР</span>
+                            <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Лешков Александер. Закончил факультет автоматизированных и информационных систем. Информационные системы и технологии. Навыки: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+                            <p data-aos="fade-left" data-aos-delay="500">
+                                Подписывайтесь на меня &mdash;
+                                <a href="#" class="p-2"><span class="icon-facebook"></span></a> 
+                                <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> 
+                                <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> 
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -83,21 +110,22 @@
             <div class="container">
                 <div class="row mb-5">
                     <div class="site-section-heading-operating">
-                        <h2>ПРОЦЕДУРА РАБОТЫ ПО СОЗДАНИЮ САЙТА</h2> </div>
+                        <h2>ПРОЦЕДУРА РАБОТЫ ПО СОЗДАНИЮ САЙТА</h2>
+                    </div>
                 </div>
                 <div class="row align-items-stretch program">
                     <div class="col-12 border-top border-bottom py-5" data-aos="fade" data-aos-delay="200">
                         <div class="row align-items-stretch">
                             <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Постановка задачи</div>
-              <div class="col-md-9">
-                  <span>Ставим Ваши задачи и пожелания на первое место и серьезно подходим к каждому проекту, будь то сайт-визитка или крупный торговый портал.</span> </div>
+                            <div class="col-md-9">
+                                <span>Ставим Ваши задачи и пожелания на первое место и серьезно подходим к каждому проекту, будь то сайт-визитка или крупный торговый портал.</span> </div>
                         </div>
                     </div>
                     <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="300">
                         <div class="row align-items-stretch">
                             <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Маркетинговые исследования</div>
-              <div class="col-md-9">
-                <span>Перед разработкой проекта анализируем сайты конкурентов и выбираем наиболее эффективные варианты структуры и подачи информации.</span> </div>
+                            <div class="col-md-9">
+                                <span>Перед разработкой проекта анализируем сайты конкурентов и выбираем наиболее эффективные варианты структуры и подачи информации.</span> </div>
                         </div>
                     </div>
                     <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="400">
@@ -138,7 +166,8 @@
                 <div class="row mb-5">
                     <div class="col-lg-4">
                         <div class="site-section-heading" data-aos="fade-up">
-                            <h2>Мои работы</h2> </div>
+                            <h2>Мои работы</h2>
+                        </div>
                     </div>
                     <div class="col-lg-6 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
                         <p>Ниже вы можете увидеть мои работы
@@ -156,7 +185,7 @@
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="300">
                         <a href="http://almmetbel.by/" class="d-block mb-4"> <img src="images/MyWork/AlmmetBel.png" alt="Image" class="img-fluid"> </a>
-                        <h2 class="mb-4"><a href="http://almmetbel.by/">ООО «АлмметБел»<br>Продажа метизов</a></h2>
+                        <h2 class="mb-4"><a href="http://almmetbel.by/">ООО «АльметБел»<br>Продажа метизов</a></h2>
                         <div class="mb-4 post-meta d-flex align-items-center">
                             <div class="mr-2"><img src="images/person_11.jpg" alt="Image" class="img-fluid"></div>
                             <div><span><a href="#">Зайцев Артём</a></span> &mdash; <span>9 Сентября, 2017</span></div>
@@ -223,6 +252,4 @@
     <script src="js/bootstrap-datepicker.min.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/main.js"></script>
-</body>
-
-</html>
+</body></html>
