--- a/index-en.html
+++ b/index-en.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
     <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/style.css"> </head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
 <body>
     <div class="site-wrap">
@@ -29,7 +30,8 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-11 col-xl-2">
-                        <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">ART<span class="text-primary">design</span>YOM</a></h1> </div>
+                        <h1 class="mb-0"><a href="index.html" class="text-white h2 mb-0">ART<span class="text-primary">design</span>YOM</a></h1>
+                    </div>
                     <div class="col-12 col-md-10 d-none d-xl-block">
                         <nav class="site-navigation position-relative text-right" role="navigation">
                             <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
@@ -52,16 +54,36 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-10"> <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Belarus</span>
-                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Web design by Artyom Zaitsev</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Dobrush, +375 (29) 234-76-23</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSejv5fiJe6DnxbpEoG5tdNLdMH7ZE81JL-lXoqgk1Ad7z1xBQ/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>To order a site</span></a> </div>
+                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Web design by Artyom Zaitsev</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Dobrush, +375 (29) 234-76-23</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSejv5fiJe6DnxbpEoG5tdNLdMH7ZE81JL-lXoqgk1Ad7z1xBQ/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>To order a site</span></a>
+                    </div>
                 </div>
             </div>
+        </div>
+        <div class="row align-items-center speaker">
+          <div class="col-lg-6 mb-5 mb-lg-0 order-lg-2" data-aos="fade" data-aos-delay="100">
+            <img src="images/person_2.jpg" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-lg-6 ml-auto order-lg-1">
+            <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Alexander Leshkov</h2>
+            <div class="bio pr-lg-5">
+              <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300">Web Designer</span>
+              <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam</p>
+              <p data-aos="fade-left" data-aos-delay="500">
+                Follow Alex &mdash;
+                <a href="#" class="p-2"><span class="icon-facebook"></span></a>
+                <a href="#" class="p-2"><span class="icon-twitter"></span></a>
+                <a href="#" class="p-2"><span class="icon-github"></span></a>
+              </p>
+            </div>
+          </div>
         </div>
         <div class="site-section">
             <div class="container">
                 <div class="row mb-5">
                     <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
                         <div class="site-section-heading">
-                            <h2>Web site</h2> </div>
+                            <h2>Web site</h2>
+                        </div>
                     </div>
                     <div class="col-lg-5 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="200">
                         <p>We are equally sensitive to any project from a business card website to a multidisciplinary online store. Each Internet resource, in our understanding, should be sold in one way or another.</p>
@@ -72,7 +94,7 @@
                     <div class="col-lg-6 ml-auto">
                         <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Artyom Zaitsev</h2>
                         <div class="bio pl-lg-5"> <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Web Designer</span>
-                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">He graduated from the Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Zaitsev Artyom Igorevich. Bachelor. Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
                             <p data-aos="fade-right" data-aos-delay="500"> Follow Artyom &mdash; <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a> <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> </p>
                         </div>
                     </div>
@@ -83,7 +105,8 @@
             <div class="container">
                 <div class="row mb-5">
                     <div class="site-section-heading-operating">
-                        <h2>OPERATING PROCEDURE OVER THE CREATION OF THE SITE</h2> </div>
+                        <h2>OPERATING PROCEDURE OVER THE CREATION OF THE SITE</h2>
+                    </div>
                 </div>
                 <div class="row align-items-stretch program">
                     <div class="col-12 border-top border-bottom py-5" data-aos="fade" data-aos-delay="200">
@@ -119,8 +142,8 @@
                     <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="700">
                         <div class="row align-items-stretch">
                             <div class="col-md-3 text-white mb-3 mb-md-0"><span class="h4">Training</div>
-              <div class="col-md-9">
-                <span>We demonstrate to your employees all the features of the site, quickly and easily explain how to work with the admin panel and track the necessary information.</span> </div>
+                            <div class="col-md-9">
+                                <span>We demonstrate to your employees all the features of the site, quickly and easily explain how to work with the admin panel and track the necessary information.</span> </div>
                         </div>
                     </div>
                     <div class="col-12 border-bottom py-5" data-aos="fade" data-aos-delay="700">
@@ -137,7 +160,8 @@
                 <div class="row mb-5">
                     <div class="col-lg-4">
                         <div class="site-section-heading" data-aos="fade-up">
-                            <h2>My works</h2> </div>
+                            <h2>My works</h2>
+                        </div>
                     </div>
                     <div class="col-lg-6 mt-5 pl-lg-5" data-aos="fade-up" data-aos-delay="100">
                         <p>The following is my work.
@@ -201,6 +225,7 @@
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
+
                                 </script> All rights reserved | This template is made with by <a href="https://vk.com/id171934947" target="_blank">Artyom Zaitsev</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
